--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -113,7 +113,7 @@
                         <input type="date" class="form-control" id="date">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a ng-click="model.openDate()" class="btn btn-default" role="button">
+                        <a ng-click="model.openDate(field)" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
