--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -90,7 +90,7 @@
                         </select>
                     </div>
                     <div class="col-sm-6 col-sm-push-1">
-                        <a ng-click="model.openDropDownPop()" class="btn btn-default" role="button">
+                        <a ng-click="model.openDropDownPop(field)" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
