--- a/public/project/client/views/search/result.view.html
+++ b/public/project/client/views/search/result.view.html
@@ -24,13 +24,8 @@
             </select>
         </div>
         <div class="form-group">
-            <select class="form-control" ng-model="model.language" ng-options="language.value as language.label for language in model.languageOptions">
-                <option value="">-- Language --</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Doctor Name">
-            <button type="submit" class="btn btn-default">Search</button>
+            <input ng-model="model.doctorName" type="text" class="form-control" placeholder="Doctor Name">
+            <button ng-click="model.search()" type="submit" class="btn btn-default">Search</button>
         </div>
     </form>
 </nav>
