--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -12,22 +12,22 @@
         <hr>
         <div class="form-group">
             <label for="email">Email Address:</label>
-            <input ng-model="user.email" class="form-control" type="text" id="email" placeholder="Emial">
+            <input ng-model="model.currentUser.email" class="form-control" type="text" id="email" placeholder="Emial">
         </div>
         <div class="form-group">
             <label for="username">Username:</label>
-            <input ng-model="user.username" class="form-control" type="text" id="username" placeholder="username">
+            <input ng-model="model.currentUser.username" class="form-control" type="text" id="username" placeholder="username">
         </div>
         <div class="form-group">
-            <label for="phone">Phone:</label>
-            <input ng-model="user.phone" class="form-control" type="text" id="phone" placeholder="phone number">
+            <label for="password">Password:</label>
+            <input ng-model="model.currentUser.password" class="form-control" type="text" id="password" placeholder="password">
         </div>
         <div class="row">
             <div class="col-md-3">
-                <a class="btn btn-success btn-block" ng-click="">Save</a>
+                <a class="btn btn-success btn-block" ng-click="model.updateProfile()">Save</a>
             </div>
             <div class="col-md-3">
-                <a class="btn btn-default btn-block" ng-click="">Cancel</a>
+                <a class="btn btn-default btn-block" ng-click="model.cancelUpdate()">Cancel</a>
             </div>
         </div>
     </div>
