--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -24,7 +24,7 @@
                 <td>{{review.comments}}</td>
                 <td>
                     <a class="btn btn-warning" ng-click="model.edit(review)"  role="button">Edit</a>
-                    <button class="btn btn-danger" ng-click="model.deleteReview($index)" role="button">Delete</button>
+                    <button class="btn btn-danger" ng-click="model.deleteReview(review)" role="button">Delete</button>
                 </td>
             </tr>
             </tbody>
