--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -29,7 +29,7 @@
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-10">
-            <input ng-model="model.currentUser.email" type="email" class="form-control" id="email" placeholder="Email">
+            <input ng-model="model.currentUser.emails[0]" type="email" class="form-control" id="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
