--- a/public/assignment/client/views/forms/dropDownPop.view.html
+++ b/public/assignment/client/views/forms/dropDownPop.view.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
         <label for="options">Options</label>
-        <textarea ng-model-options="model.field.options" class="form-control" id="options" rows="5"></textarea>
+        <textarea ng-model="model.field.options" class="form-control" id="options" rows="5"></textarea>
     </div>
 </div>
 <div class="modal-footer">
