--- a/public/assignment/client/views/forms/emailPop.view.html
+++ b/public/assignment/client/views/forms/emailPop.view.html
@@ -4,11 +4,11 @@
 <div class="modal-body">
     <div class="form-group">
         <label for="lable">Lable</label>
-        <input class="form-control" type="text" id="lable">
+        <input ng-model="model.field.label" class="form-control" type="text" id="lable">
     </div>
     <div class="form-group">
         <label for="placeholder">Placeholder</label>
-        <input class="form-control" type="text" id="placeholder">
+        <input ng-model="model.field.placeholder" class="form-control" type="text" id="placeholder">
     </div>
 </div>
 <div class="modal-footer">
@@ -17,7 +17,7 @@
                 <button class="btn btn-info btn-block" ng-click="model.close()">Close</button>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-6">
-                <button class="btn btn-info btn-block" ng-click="">Ok</button>
+                <button class="btn btn-info btn-block" ng-click="model.update()">Ok</button>
             </div>
         </div>
 </div>
