--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -66,7 +66,7 @@
                         <input type="email" class="form-control" id="email" placeholder="{{field.placeholder}}">
                     </div>
                     <div class="col-sm-6 col-sm-push-1 ">
-                        <a ng-click="model.openEmailPop()" class="btn btn-default" role="button">
+                        <a ng-click="model.openEmailPop(field)" class="btn btn-default" role="button">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </a>
                         <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
@@ -194,6 +194,7 @@
                 <select ng-model="model.fieldType" id="newField" class="form-control">
                     <option>Single Line Text Field</option>
                     <option>Multi Line Text Field</option>
+                    <option>Email Field</option>
                     <option>Date Field</option>
                     <option>Dropdown Field</option>
                     <option>Checkboxes Field</option>
