--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -82,6 +82,29 @@
                 </div>
             </div>
 
+            <div ng-switch-when="PASSWORD" class="form-group">
+                <label for="password" class="form-control-label">{{field.label}}:</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" id="password" placeholder="{{field.placeholder}}">
+                    </div>
+                    <div class="col-sm-6 col-sm-push-1 ">
+                        <a ng-click="model.openPasswordPop(field)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a ng-click="model.deleteField(field._id)" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </a>
+                        <a href="" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <div ng-switch-when="OPTIONS" class="form-group">
                 <label for="gender" class="form-control-label">{{field.label}}:</label>
                 <div class="row">
@@ -195,6 +218,7 @@
                     <option>Single Line Text Field</option>
                     <option>Multi Line Text Field</option>
                     <option>Email Field</option>
+                    <option>Password Field</option>
                     <option>Date Field</option>
                     <option>Dropdown Field</option>
                     <option>Checkboxes Field</option>
