--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -7,8 +7,10 @@
             <tr>
                 <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
                 <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Role</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>First Name</th>
+                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Last Name</th>
+                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Roles</th>
+                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Actions</th>
             </tr>
             <tr>
                 <th>
@@ -20,6 +22,12 @@
                 </th>
                 <th>
                     <input type="text" class="form-control" placeholder="role">
+                </th>
+                <th>
+                    <input type="text" class="form-control" placeholder="firstname">
+                </th>
+                <th>
+                    <input type="text" class="form-control" placeholder="lastname">
                 </th>
                 <th>
                     <a href="#" class="btn btn-primary" role="button">
@@ -36,6 +44,8 @@
                 <td>Alice</td>
                 <td>&nbsp;</td>
                 <td>student</td>
+                <td>Alice</td>
+                <td>Wonderland</td>
                 <td>
                     <a href="#" class="btn btn-danger" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -45,32 +55,7 @@
                     </a>
                 </td>
             </tr>
-            <tr>
-                <td>Bob</td>
-                <td>&nbsp;</td>
-                <td>faculty | admin</td>
-                <td>
-                    <a href="#" class="btn btn-danger" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-warning" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>Charlie</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>
-                    <a href="#" class="btn btn-danger" role="button">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </a>
-                    <a href="#" class="btn btn-warning" role="button">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                </td>
-            </tr>
+
         </tbody>
     </table>
 </div>
