--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -31,10 +31,10 @@
                 </th>
                 <th>
                     <a ng-click="model.createUser()" class="btn btn-primary" role="button">
-                        <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                     </a>
-                    <a href="#" class="btn btn-success" role="button">
-                        <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                    <a ng-click="model.updateUser()" class="btn btn-success" role="button">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                     </a>
                 </th>
             </tr>
@@ -50,7 +50,7 @@
                     <a ng-click="model.removeUser(user)" class="btn btn-danger" role="button">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </a>
-                    <a href="#" class="btn btn-warning" role="button">
+                    <a ng-click="model.selectUser(user)" class="btn btn-warning" role="button">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
                 </td>
