--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -1,28 +1,35 @@
-<h2>Doctor Details</h2>
+<!--Doctor's basic and contact information-->
+<br>
 <div class="row">
-    <div class="col-md-6 col-md-offset-2">
-        <div class="col-sm-3"><img class="img-circle" ng-src="{{model.data.profile.image_url}}"></div>
-        <div class="col-sm-9">
+    <div class="col-md-7">
+        <div class="col-md-4">
+            <img class="img-circle" height="180px" ng-src="{{model.data.profile.image_url}}">
+        </div>
+        <div class="col-sm-6">
             <ul class="list-unstyled">
-                <li>{{model.data.profile.first_name}} &nbsp {{model.data.profile.last_name}}</li>
-                <li>{{model.data.specialties[0].name}}</li>
+                <li><h3>Dr.{{model.data.profile.first_name}}&nbsp{{model.data.profile.last_name}}, {{model.data.profile.title}} </h3></li>
+                <li><h4>{{model.data.specialties[0].actor}}</h4></li>
                 <li><img ng-src="{{model.data.ratings[0].image_url_small}}"></li>
                 <li>{{model.data.practices[0].name}}</li>
-                <li>{{model.data.practices[0].phones[0].number}}</li>
+                <li>Phone {{model.data.practices[0].phones[0].number}}</li>
             </ul>
         </div>
-    </div>
-    <div class="col-md-2">
-        <p><button class="btn btn-default btn-block" role="button" ng-click="model.rate()">Rate</button></p>
-        <p><button ng-click="model.addFavorite()" class="btn btn-default btn-block">Favorite</button></p>
+        <div class="col-md-2">
+            <br><!--bad practice-->
+            <button class="btn btn-default btn-block" role="button" ng-click="model.rate()">Rate</button>
+            <button ng-click="model.addFavorite()" class="btn btn-default btn-block">Favorite</button>
+        </div>
     </div>
 </div>
 <div ng-show="model.addSuccess" class="alert alert-success" role="alert"><p align="center">Added to my favorites!</p></div>
+<br>
+<!--Doctor's demographic information-->
+<!--Education-->
 <hr>
 <div class="row">
-    <div class="col-md-5 col-md-offset-1">
-        <div class="col-md-5">Education</div>
-        <div class="col-md-7">
+    <div class="col-md-7">
+        <div class="col-md-4"><strong>Education</strong></div>
+        <div class="col-md-8">
             <div ng-repeat="education in model.data.educations">
                 <div>{{education.school}}</div>
             </div>
@@ -31,33 +38,83 @@
 </div>
 <hr>
 <div class="row">
-    <div class="col-md-5 col-md-offset-1">
-        <div class="col-md-5">Languages Spoken </div>
-        <div class="col-md-7">
+    <div class="col-md-7">
+        <div class="col-md-4"><strong>Professional Statement</strong></div>
+        <div class="col-md-8">
+            <div class="text-justify">{{model.data.profile.bio}}</div>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-7">
+        <div class="col-md-4"><strong>Specialties</strong> </div>
+        <div class="col-md-8">
+            <div ng-repeat="specialty in model.data.specialties">
+                <div>{{specialty.actor}}</div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-7">
+        <div class="col-md-4"><strong>Languages Spoken</strong> </div>
+        <div class="col-md-8">
             <div ng-repeat="language in model.data.profile.languages">
                 <div>{{language.name}}</div>
             </div>
         </div>
     </div>
 </div>
+<hr>
+<div class="row">
+    <div class="col-md-7">
+        <div class="col-md-4"><strong>Insurances</strong> </div>
+        <div class="col-md-8">
+            <div ng-repeat="insurance in model.data.insurances | limitTo:4">
+                <div>{{insurance.insurance_plan.name}}</div>
+            </div>
+            <a ng-click=""><strong>View all</strong></a>
+        </div>
+    </div>
+</div>
+<br>
+<!--Patient Review Section-->
+<div><h3>Patient Reviews</h3></div>
+<hr>
+<div class="row">
+    <div class="col-md-7">
+        <div class="col-md-4">
+            By PatientName
+        </div>
+        <div class="col-md-8">
+            <div class="row">
+                <div class="col-md-4">
+                    <div>Overall Rating</div>
+                    <div>123</div>
+                </div>
+                <div class="col-md-4">
+                    <div>Bedside Manner</div>
+                    <div>123</div>
+                </div>
+                <div class="col-md-4">
+                    <div>Wait Time</div>
+                    <div>123</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    Lorem ipsum dolor sit amet, vivamus scelerisque a turpis laoreet, wisi morbi magna lacinia ipsum, aliquam in. Et fermentum neque vivamus, risus nulla tempus sollicitudin convallis potenti posuere, aliquam sem magna, ut quis sociosqu voluptas eget nisl eu, id nullam vel varius nec.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<h3>Favorites</h3>
+<hr>
 
-
-
-<!--<ul class="list-unstyled">-->
-    <!--<li><button class="btn btn-default">Rate</button></li>-->
-    <!--<li><button class="btn btn-default">Favorite</button></li>-->
-<!--</ul>-->
-
-<!--<ul class="list-inline">-->
-    <!--<li><img ng-src="{{detail.data.data.profile.image_url}}"></li>-->
-    <!--<li>-->
-
-    <!--</li>-->
-    <!--<li>-->
-        <!--<button class="btn btn-default">Rate</button>-->
-        <!--<button class="btn btn-default">Favorite</button>-->
-    <!--</li>-->
-<!--</ul>-->
 
 
 
